# rust-mir-checker

./: .gitignore  1  Cargo.toml  README.md  case1  case2  case3  get_unchecked  get_unchecked_mut  offset  offset_from  rustc-ice-2025-02-24T10_28_03-3574329.txt  temp.rs  test  test1  test2  test3  test4
apron-sys/: Cargo.toml  build.rs
scripts/real-world-crates/: run_evaluation.py
src/: lib.rs
src/analysis/: analysis_result.rs  callback.rs  crate_context.rs  diagnostics.rs  global_context.rs  wto.rs  z3_solver.rs
src/analysis/analyzer/: numerical_analysis.rs
src/analysis/memory/: constant_value.rs  expression.rs  known_names.rs  path.rs  symbolic_value.rs  utils.rs
src/analysis/mir_visitor/: block_visitor.rs  body_visitor.rs  call_visitor.rs  type_visitor.rs
src/analysis/numerical/: apron_domain.rs  linear_constraint.rs
src/checker/: assertion_checker.rs  unsafe_func_checker.rs
test-11-1/: get_unchecked.rs  get_unchecked_mut.rs  offset.rs  offset_from.rs  offset_struct.rs  test.rs  test1.rs  test3.rs  wrapping_offset.rs
tests/unsafe-func-bugs/: README
tests/unsafe-func-bugs/as_ptr_to_mut/: Cargo.toml
tests/unsafe-func-bugs/byte_offset/: Cargo.toml
tests/unsafe-func-bugs/from_raw_parts_mut/: Cargo.toml
tests/unsafe-func-bugs/get_unchecked_mut/: Cargo.toml
tests/unsafe-func-bugs/macro_safe_offset/: Cargo.toml
tests/unsafe-func-bugs/manual_bounds_check/: Cargo.toml
tests/unsafe-func-bugs/multidimensional_array_offset/: Cargo.toml
tests/unsafe-func-bugs/option_get_mut_bounds/: Cargo.toml
tests/unsafe-func-bugs/wrapping_offset/: Cargo.toml
(+13 files in other folders)
