[package]
name = "rust-mir-checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cargo-mir-checker"

[[bin]]
name = "mir-checker"

[dependencies]
cargo_metadata = "*"
pretty_env_logger = "0.5.0"
log = "0.4"
proc-macro2 = "=1.0.89"
log-derive = "0.4.1"
failure = "0.1.6"
rug = "1.11.0"
foreign-types = "0.5.0"
libc = "0.2.66"
gmp-mpfr-sys = "1.1.14"
z3-sys = "0.8.1"
itertools = "0.13.0"
lazy_static = "1.4.0"
az = "1.0.0"
serde_json = "1.0.61"
apron-sys = { path = "./apron-sys" }

[profile.release]
lto = true
